--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -15,6 +15,7 @@ overflow: hidden;
   flex-direction: column;
   gap: 8px;
   padding: 0 10px;
+  margin-bottom: auto;
 }
 
 #dashboardLink {
