--- a/css/layout.css
+++ b/css/layout.css
@@ -14,7 +14,6 @@
    position: relative;
    grid-area: mainContent;
    background: var(--mainContent-bg);
-   border-radius: var(--radius);
    border: 1px solid var(--border);
    padding: var(--space-sm) var(--space-sm) 20px;
    overflow: auto;
@@ -25,11 +24,11 @@
   background: var(--card-bg);
   height: 100%;
   padding-top: 10px;
-  border-radius: var(--radius);  
 }
 #sidebar {
    height: 100%;
    width: 100%;
+
    overflow-y: auto;
    position: relative;
 }
@@ -51,7 +50,7 @@
 
    .sidebarContainer {
       z-index: 3;
-      width: 80%;
+      width: 85%;
       max-width: 300px;
       transform: translateX(-100%);
       transition: 0.4s;
